restructuring code folders and using routes to route the request

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 
     <div class="float-right">
     <h1>Login</h1>
-    <form action="/login" method="POST">
+    <form action="/actionLogin" method="POST">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
