--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,18 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: serif;
 }
-.banner{
+
+.banner {
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("bg image.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("bg image.jpg");
     background-size: cover;
     background-position: center;
 }
-.navbar{
+
+.navbar {
     width: 85%;
     margin: auto;
     padding: 35px 0;
@@ -18,22 +20,26 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo{
+
+.logo {
     width: 120px;
     cursor: pointer;
 }
-.navbar ul li{
+
+.navbar ul li {
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     position: relative;
 }
-.navbar ul li a{
+
+.navbar ul li a {
     text-decoration: none;
     color: #FFF;
     text-transform: uppercase;
 }
-.navbar ul li::after{
+
+.navbar ul li::after {
     content: '';
     height: 3px;
     width: 100%;
@@ -41,13 +47,15 @@
     position: absolute;
     left: 0;
     bottom: -10px;
-	transition:.5s;
+    transition: .5s;
 }
-.navbar ul li:hover::after{
+
+.navbar ul li:hover::after {
     width: 80%;
-	 transform: translateY(50%); 
+    transform: translateY(50%);
 }
-.content{
+
+.content {
     width: 100%;
     position: absolute;
     top: 50%;
@@ -55,16 +63,19 @@
     text-align: center;
     color: #FFF;
 }
-content h1{
+
+content h1 {
     font-size: 70px;
     margin-top: 80px;
 }
-.content p{
+
+.content p {
     margin-top: 20px auto;
     font-weight: 100;
     line-height: 25px;
 }
-button{
+
+button {
     width: 200px;
     padding: 15px 0;
     text-align: center;
@@ -78,7 +89,8 @@ button{
     position: relative;
     overflow: hidden;
 }
-span{
+
+span {
     background: #009688;
     height: 100%;
     width: 0;
@@ -88,6 +100,7 @@ span{
     bottom: 0;
     z-index: -1;
 }
-button:hover span{
+
+button:hover span {
     width: 100%;
 }
