--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,19 +41,31 @@
                         </a>
                     </div>
                 </form>
-                <form action="/register/actionregister" class="sign-up-form" method="POST">
+                <form action="/register/actionregister" enctype="application/json" class="sign-up-form" method="POST">
                     <h2 class="title">Sign up</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username" />
+                        <input type="text" class="form-control" id="Username" placeholder="User Name" />
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="text" class="form-control" id="lastname"  placeholder="Last name" />
                     </div>
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input type="email" placeholder="Email" />
+                        <input type="email" class="form-control" id="email" placeholder="Email" />
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" />
+                        <input type="password" class="form-control" id="password" placeholder="Password" />
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" class="form-control" id="confirmpassword" placeholder="Confirm Password" />
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="profile" placeholder="Profile" />
                     </div>
                     <input type="submit" class="btn" value="Sign up" />
                     <p class="social-text">Or Sign up with social platforms</p>
@@ -82,9 +94,7 @@
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, ex ratione. Aliquid!
                     </p>
-                    <button class="btn transparent" id="sign-up-btn">
-              Sign up
-            </button>
+                    <button class="btn transparent" id="sign-up-btn">Sign up</button>
                 </div>
                 <img src="log.svg" class="image" alt="" />
             </div>
@@ -94,9 +104,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum laboriosam ad deleniti.
                     </p>
-                    <button class="btn transparent" id="sign-in-btn">
-              Sign in
-            </button>
+                    <button class="btn transparent" id="sign-in-btn">Sign in</button>
                 </div>
                 <img src="register.svg" class="image" alt="" />
             </div>
