--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/scss/home.css">
 
 
-    <title>Hello, world!</title>
+    <title>Quality Health</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="main_header">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#"><i class="fab fa-500px">SSSS</i></a>
+                <a class="navbar-brand" href="#"><i class="fab fa-500px">Quality-Health</i></a>
 
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <!--  <span class="sr-only ">Toggle navigation</span> -->
@@ -32,17 +32,20 @@
                 <div class="navbar-collapse collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home<span class="sr-only"></span></a>
+                            <a class="nav-link active" href="/home">Home<span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" href="/doctor">Doctor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" href="/appointment">Appointment</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/diagnostic">Diagnostics</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="/clinic">Clinic</a>
                         </li>
                     </ul>
 
@@ -63,9 +66,8 @@
                 <div class="row ">
                     <div class="col-lg-6 col-10 mx-auto ">
                         <div class="header_hero__text ">
-                            <h2><span>Welcome</span> to all!</h2>
-                            <p>ahkfhajfhakfhncknsdkc
-                            </p>
+                            <h2><span>Welcome</span> all to</h2>
+                            <p> Quality Health</p>
 
                             <div class="header_hero__btn ">
                                 <a href="# " alt=" ">Click to download</a>
