--- a/views/login_register.ejs
+++ b/views/login_register.ejs
@@ -17,13 +17,13 @@
                     <h2 class="title">Sign in</h2>
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username" />
+                        <input type="text" class="form-control" id="sign-email" name="email" placeholder="Email" />
                     </div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" />
+                        <input type="password" class="form-control" id="signin-password" name="password"  placeholder="Password" />
                     </div>
-                    <input type="submit" value="Login" class="btn solid" />
+                    <input type="submit" value="Login" class="btn solid"/>
                     <p class="social-text">Or Sign in with social platforms</p>
                     <div class="social-media">
                         <a href="#" class="social-icon">
